monticore-generator/src/test/resources/cocos/invalid/A2007/A2007Sup6.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2007;

grammar A2007Sup6 extends cocos.invalid.A2007.A2007Super {

  A extends M = M? "one" M;

}